# ec2-cli

./: AGENTS.md  Cargo.toml
src/: error.rs  main.rs
src/aws/: client.rs  infrastructure.rs  mod.rs
src/aws/ec2/: instance.rs  mod.rs
src/cli/: completions.rs  mod.rs
src/cli/commands/: config.rs  destroy.rs  list.rs  logs.rs  manual.rs  mod.rs  pull.rs  push.rs  scp.rs  ssh.rs  status.rs  up.rs
src/config/: settings.rs
src/git/: config.rs  mod.rs  operations.rs  remote.rs  vcs.rs
src/profile/: loader.rs  schema.rs
src/ssh/: key_loader.rs  mod.rs
src/state/: local.rs  mod.rs
src/ui/: mod.rs  spinner.rs
src/user_data/: generator.rs
