[package]
name = "ec2-cli"
version = "0.1.0"
edition = "2021"
description = "Ephemeral EC2 Development Environment Manager"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# AWS SDK
aws-config = "1.8"
aws-sdk-ec2 = "1.101"
aws-sdk-ssm = "1.60"
aws-sdk-iam = "1.60"
aws-sdk-sts = "1.60"
aws-smithy-types = "1.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json5 = "0.4"

# Git
git2 = "0.19"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# UI
indicatif = "0.17"
dialoguer = "0.11"

# Utilities
directories = "5.0"
shell-escape = "0.1"
petname = "2.0"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
uuid = { version = "1.11", features = ["v4"] }
hostname = "0.4"
